# naas

./: Cargo.toml  Containerfile  LICENSE  README.md
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  ingress.yaml  service.yaml
src/: main.rs
