[package]
name = "naas"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
missing_errors_doc = "allow"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
envconfig = "0.11.1"
tokio = { version = "1.52.2", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = "5.5.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
